# Wellick

./: .gitignore  Cargo.toml  README.md  builtins.c  requirements.txt  run.py
compiler/: Cargo.toml
compiler/src/: ast.rs  conditional.rs  expressions.rs  functions.rs  helpers.rs  literals.rs  main.rs
compiler/src/compiler/: builtins.rs  functions.rs  mod.rs  temp_.rs  translate.rs  variables.rs
compiler/src/parser/: ast.rs  conditional.rs  expressions.rs  functions.rs  helpers.rs  literals.rs  mod.rs  stmts.rs
examples/: add_integers.wellick  builtins.wellick  call_site_pointer_qualifier.wellick  default_const.wellick  fibonacci.wellick  fizzbuzz.wellick  pointer_qualifier.wellick  ptr_type.wellick  source.txt  source.wellick
lexer/src/: lib.rs  tokens.rs
parser/src/: ast.rs  lib.rs
src/: main.rs
src/lexer/: cursor.rs  mod.rs  tokens.rs
tests/: README.md  test_examples.py
tests/pass_examples/: default_const.wellick  fibonacci.wellick  iadd_builtin.wellick  imul_builtin.wellick  isub_builtin.wellick  pointer_qualifier.wellick  ptr_type.wellick
wellick/: Cargo.toml
wellick/src/: main.rs
wellick/src/compiler/: constants.rs  functions.rs  mod.rs  pointer.rs  translate.rs  variables.rs
wellick/src/parser/: ast.rs  expressions.rs  helpers.rs  literals.rs  stmts.rs
