[package]
name = "Wellick"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
cranelift = "0.94.0"
cranelift-codegen = { version = "0.94.0", features = ["arm64", "x86"] }
cranelift-frontend = "0.94.0"
cranelift-module = "0.94.0"
cranelift-native = "0.94.0"
cranelift-object = "0.94.0"
lazy_static = "1.4.0"
nom = "7.1.3"
